--- a/tests/mock-app/tox.ini
+++ b/tests/mock-app/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist = py35,py36,py37,py38
-isolated_build = true
 
 [testenv]
-deps = pytest
-commands = pytest
+deps = 
+    pytest
+commands = 
+    pytest
